updated fetch and render results

--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>wiki starter</h1>
-    <script src="./app.js"></script>
+    <section class="wiki">
+      <div class="container">
+        <img src="./wiki-logo.png" alt="logo" />
+        <h3>Search Wikipedia</h3>
+        <form class="form">
+          <input type="text" class="form-input" />
+          <button type="submit" class="submit-btn">submit</button>
+        </form>
+      </div>
+      <!-- results -->
+      <div class="results">
+        <div class="articles">
+          <a href="#" target="_blank">
+            <h4>title</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
+              aliquam molestias ducimus totam, a quia adipisci veritatis porro,
+              modi quod amet cum aspernatur reiciendis quis officia similique
+              sapiente eius! Atque!
+            </p>
+          </a>
+        </div>
+      </div>
+    </section>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
