updated fetch and render results

--- a/index.html
+++ b/index.html
@@ -18,19 +18,7 @@
         </form>
       </div>
       <!-- results -->
-      <div class="results">
-        <div class="articles">
-          <a href="#" target="_blank">
-            <h4>title</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
-              aliquam molestias ducimus totam, a quia adipisci veritatis porro,
-              modi quod amet cum aspernatur reiciendis quis officia similique
-              sapiente eius! Atque!
-            </p>
-          </a>
-        </div>
-      </div>
+      <div class="results"></div>
     </section>
     <script type="module" src="./app.js"></script>
   </body>
